--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "@picocss/pico": "^1.5.7",
     "core-js": "^3.8.3",
+    "ffmetadata": "^1.7.0",
+    "path-browserify": "^1.0.1",
+    "stream-browserify": "^3.0.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
